# tauri-explore

./: package.json
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/permissions/: custom-invoke.json
src-tauri/src/: lib.rs  main.rs  printer.rs
src/app/: layout.js  page.js
src/app/about/: page.jsx
src/app/contact/: page.jsx
src/app/printers/: page.jsx
